// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`greedyPack gives nothing for nothingg 1`] = `Array []`;

exports[`greedyPack works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 94.64375%;
        height: 46.73180592991914%;
        transform: translateX(5.28296902859407%) translateY(113.41312184571018%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.95,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.95,
      \\"e\\":40,
      \\"f\\":393.26
    }",
    "points": Array [
      Object {
        "x": 40.95,
        "y": 394.21,
      },
      Object {
        "x": 40.95,
        "y": 740.96,
      },
      Object {
        "x": 798.0999999999999,
        "y": 740.96,
      },
      Object {
        "x": 798.0999999999999,
        "y": 394.21,
      },
    ],
    "rotate": -0,
    "scale": 0.95,
    "svgTransform": "matrix(0.95,0,0,0.95,40,393.26)",
    "translateX": 40,
    "translateY": 393.26,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 94.64375%;
        height: 49.80458221024258%;
        transform: translateX(5.28296902859407%) translateY(6.023542145853065%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.95,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.95,
      \\"e\\":40,
      \\"f\\":22.259999999999998
    }",
    "points": Array [
      Object {
        "x": 40.95,
        "y": 23.209999999999997,
      },
      Object {
        "x": 78.94999999999999,
        "y": 392.76,
      },
      Object {
        "x": 774.3499999999999,
        "y": 392.76,
      },
      Object {
        "x": 798.0999999999999,
        "y": 23.209999999999997,
      },
    ],
    "rotate": -0,
    "scale": 0.95,
    "svgTransform": "matrix(0.95,0,0,0.95,40,22.259999999999998)",
    "translateX": 40,
    "translateY": 22.259999999999998,
  },
]
`;

exports[`greedyPack works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 62.265625%;
        height: 30.744609164420485%;
        transform: translateX(160.47303994348914%) translateY(6.088655141895162%) rotate(90.00000000000001deg)
      ",
    "matrix": "{
      \\"a\\":-8.456776945386935e-17,
      \\"b\\":0.625,
      \\"c\\":-0.625,
      \\"d\\":-8.456776945386935e-17,
      \\"e\\":799.3563302185053,
      \\"f\\":13.88974454244834
    }",
    "points": Array [
      Object {
        "x": 798.7313302185053,
        "y": 14.51474454244834,
      },
      Object {
        "x": 570.6063302185053,
        "y": 14.51474454244831,
      },
      Object {
        "x": 570.6063302185053,
        "y": 512.6397445424483,
      },
      Object {
        "x": 798.7313302185051,
        "y": 512.6397445424484,
      },
    ],
    "rotate": 90.00000000000001,
    "scale": 0.625,
    "svgTransform": "matrix(-8.456776945386935e-17,0.625,-0.625,-8.456776945386935e-17,799.3563302185053,13.88974454244834)",
    "translateX": 799.3563302185053,
    "translateY": 13.88974454244834,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 62.265625%;
        height: 32.76617250673854%;
        transform: translateX(112.20301202524685%) translateY(-0.250991361476005%) rotate(89deg)
      ",
    "matrix": "{
      \\"a\\":0.010907754023302265,
      \\"b\\":0.6249048094727445,
      \\"c\\":-0.6249048094727445,
      \\"d\\":0.010907754023302265,
      \\"e\\":558.9112536507608,
      \\"f\\":-0.6102227475885371
    }",
    "points": Array [
      Object {
        "x": 558.2972565953114,
        "y": 0.02558981590750964,
      },
      Object {
        "x": 315.6455958713459,
        "y": 29.26489850988187,
      },
      Object {
        "x": 323.63007181640313,
        "y": 486.6952190439309,
      },
      Object {
        "x": 566.9907365518833,
        "y": 498.07472296568494,
      },
    ],
    "rotate": 89,
    "scale": 0.625,
    "svgTransform": "matrix(0.010907754023302265,0.6249048094727445,-0.6249048094727445,0.010907754023302265,558.9112536507608,-0.6102227475885371)",
    "translateX": 558.9112536507608,
    "translateY": -0.6102227475885371,
  },
]
`;

exports[`greedyPack works 3`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 94.64375%;
        height: 46.73180592991914%;
        transform: translateX(5.28296902859407%) translateY(113.41312184571018%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.95,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.95,
      \\"e\\":40,
      \\"f\\":393.26
    }",
    "points": Array [
      Object {
        "x": 40.95,
        "y": 394.21,
      },
      Object {
        "x": 40.95,
        "y": 740.96,
      },
      Object {
        "x": 798.0999999999999,
        "y": 740.96,
      },
      Object {
        "x": 798.0999999999999,
        "y": 394.21,
      },
    ],
    "rotate": -0,
    "scale": 0.95,
    "svgTransform": "matrix(0.95,0,0,0.95,40,393.26)",
    "translateX": 40,
    "translateY": 393.26,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 94.64375%;
        height: 49.80458221024258%;
        transform: translateX(5.28296902859407%) translateY(4.015694763902043%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.95,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.95,
      \\"e\\":40,
      \\"f\\":14.84
    }",
    "points": Array [
      Object {
        "x": 40.95,
        "y": 15.79,
      },
      Object {
        "x": 78.94999999999999,
        "y": 385.34,
      },
      Object {
        "x": 774.3499999999999,
        "y": 385.34,
      },
      Object {
        "x": 798.0999999999999,
        "y": 15.79,
      },
    ],
    "rotate": -0,
    "scale": 0.95,
    "svgTransform": "matrix(0.95,0,0,0.95,40,14.84)",
    "translateX": 40,
    "translateY": 14.84,
  },
]
`;

exports[`greedyPack works 4`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 99.35646900269542%;
        height: 42.203125%;
        transform: translateX(0%) translateY(135.06108848574604%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.925,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.925,
      \\"e\\":0,
      \\"f\\":456
    }",
    "points": Array [
      Object {
        "x": 0.925,
        "y": 456.925,
      },
      Object {
        "x": 0.925,
        "y": 794.55,
      },
      Object {
        "x": 738.1500000000001,
        "y": 794.55,
      },
      Object {
        "x": 738.1500000000001,
        "y": 456.925,
      },
    ],
    "rotate": -0,
    "scale": 0.925,
    "svgTransform": "matrix(0.925,0,0,0.925,0,456)",
    "translateX": 0,
    "translateY": 456,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 99.35646900269542%;
        height: 44.978125000000006%;
        transform: translateX(0%) translateY(26.679635934134645%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.925,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.925,
      \\"e\\":0,
      \\"f\\":96
    }",
    "points": Array [
      Object {
        "x": 0.925,
        "y": 96.925,
      },
      Object {
        "x": 37.925000000000004,
        "y": 456.75,
      },
      Object {
        "x": 715.0250000000001,
        "y": 456.75,
      },
      Object {
        "x": 738.1500000000001,
        "y": 96.925,
      },
    ],
    "rotate": -0,
    "scale": 0.925,
    "svgTransform": "matrix(0.925,0,0,0.925,0,96)",
    "translateX": 0,
    "translateY": 96,
  },
]
`;
